# cognoscere

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: config.py  database.py  main.py
app/application/: auth_tokens.py  bootstrap.py
app/domain/: __init__.py  daily_defaults.py  user_role.py
app/infrastructure/: config.py  database.py
app/infrastructure/llm/: llm_service.py
app/infrastructure/persistence/: __init__.py  daily_checkin.py  session.py  user.py
app/models/: __init__.py  invitation.py  protocol.py  session.py  user.py
app/presentation/api/: deps.py
app/presentation/api/routers/: admin.py  auth.py  daily_checkin.py  protocols.py  sessions.py
app/presentation/schemas/: admin.py  auth.py  daily_checkin.py  protocol.py  session.py
app/routers/: auth.py  deps.py  protocols.py  sessions.py  voice.py
app/schemas/: auth.py  protocol.py  session.py
app/services/: auth.py  claude_service.py
deploy/gcp/: .env.example  Caddyfile.host.example  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  entrypoint-backend.sh  nginx-edge.conf
docs/: GCP_KROK_PO_KROKU.md
frontend/: .env.local.example  .gitignore  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/app/admin/: page.tsx
frontend/app/daily/: page.tsx
frontend/app/daily/[sessionId]/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/patients/[id]/: page.tsx
frontend/app/patients/[id]/daily/[sessionId]/: page.tsx
frontend/app/register/: page.tsx
frontend/app/session/[id]/: page.tsx
frontend/app/session/new/: page.tsx
frontend/app/sessions/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/therapist/sessions/[id]/: page.tsx
frontend/components/: app-header.tsx  body-map.tsx  guest-theme-controls.tsx  password-input.tsx  theme-provider.tsx  user-menu.tsx  voice-button.tsx
frontend/lib/: api.ts  auth.ts
